Update content in index.html

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <a href="#home">Главная</a>
             <a href="#packages">Услуги</a>
             <a href="#services">Сервисы</a>
-            <a href="#pricing">Цена пакетов</a>
+            <a href="#pricing">Цены на пакет</a>
             <a href="#review">Отзывы</a>
-            <a href="#contact">Контакты</a>
-            <a href="#blogs">Блоги</a>
+            <a href="#contact">Обратная связь</a>
+            <a href="#blogs">Новости</a>
         </nav>
         <form action="" class="login-form">
             <div class="inputBox">
@@ -61,7 +61,7 @@
             <h3>Чтобы стать фронтендером,
                 не нужно техническое образование</h3>
             <p>Освоить эту профессию и начать путь в IT может каждый человек!</p>
-            <a href="#" class="btn">Выбор услуги</a>
+            <a href="#packages" class="btn">Выбор услуги</a>
         </div>
         <div class="image" data-aos="fade-down">
             <img src="img/mainbg.png" alt="">
@@ -82,7 +82,7 @@
                     <div class="price">3500руб <span>4500руб</span></div>
                     <p>Погрузимся в мир программирования и научимся базовым принципам разметок</p>
                 </div>
-                <a href="#" class="btn">Приобрести</a>
+                <a href="#pricing" class="btn">Приобрести</a>
             </div>
             <div class="box" data-aos="fade-up">
                 <div class="image">
@@ -93,7 +93,7 @@
                     <div class="price">4000руб <span>6000руб</span></div>
                     <p>Изучим продвинутые принципы программирования на html и css</p>
                 </div>
-                <a href="#" class="btn">Приобрести</a>
+                <a href="#pricing" class="btn">Приобрести</a>
             </div>
             <div class="box" data-aos="fade-up">
                 <div class="image">
@@ -104,7 +104,7 @@
                     <div class="price">2500руб <span>4500руб</span></div>
                     <p>Научимся взаимодействовать со страницей, делать базовые анимации</p>
                 </div>
-                <a href="#" class="btn">Приобрести</a>
+                <a href="#pricing" class="btn">Приобрести</a>
             </div>
             <div class="box" data-aos="fade-up">
                 <div class="image">
@@ -115,7 +115,7 @@
                     <div class="price">3000руб <span>4000руб</span></div>
                     <p>Познакомимся с одним из фреймоворков - React</p>
                 </div>
-                <a href="#" class="btn">Приобрести</a>
+                <a href="#pricing" class="btn">Приобрести</a>
             </div>
             <div class="box" data-aos="fade-up">
                 <div class="image">
@@ -126,7 +126,7 @@
                     <div class="price">3000руб <span>4000руб</span></div>
                     <p>Познакомимся с одним из фреймоворков - Angular</p>
                 </div>
-                <a href="#" class="btn">Приобрести</a>
+                <a href="#pricing" class="btn">Приобрести</a>
             </div>
             <div class="box" data-aos="fade-up">
                 <div class="image">
@@ -137,7 +137,7 @@
                     <div class="price">3000руб <span>4000руб</span></div>
                     <p>Познакомимся с одним из фреймоворков - Vue</p>
                 </div>
-                <a href="#" class="btn">Приобрести</a>
+                <a href="#pricing" class="btn">Приобрести</a>
             </div>
         </div>
     </section>
@@ -202,7 +202,7 @@
                     <li>Видеоматериалы и задания</li>
                     <li>HTML (база), HTML + CSS (продвинутый)</li>
                 </ul>
-                <a href="#" class="btn">Выбрать план</a>
+                <a href="#contact" class="btn">Выбрать план</a>
             </div>
             <div class="box" data-aos="zoom-in-up">
                 <h3>Стандартный план</h3>
@@ -216,7 +216,7 @@
                     <li>HTML (база), HTML + CSS (продвинутый), JavaScript</li>
                     <li>Доступ к видеовстрече с ментором курса</li>
                 </ul>
-                <a href="#" class="btn">Выбрать план</a>
+                <a href="#contact" class="btn">Выбрать план</a>
             </div>
             <div class="box" data-aos="zoom-in-up">
                 <h3>Премиум план</h3>
@@ -231,7 +231,7 @@
                     <li>Доступ к видеовстрече с ментором курса</li>
                     <li>Рекомендации к собеседованию на junior frondend разработчика</li>
                 </ul>
-                <a href="#" class="btn">Выбрать план</a>
+                <a href="#contact" class="btn">Выбрать план</a>
             </div>
         </div>
     </section>
